# pjt

./: .replit  API_DOCUMENTATION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  SOURCE_CODE_OVERVIEW.md  api_client.py  app.py  pyproject.toml  replit.md  requirements.txt  test.db
.streamlit/: config.toml
backend/: .env  auth.py  database.py  main.py  models.py  notifications.py  schemas.py
data/: health_metrics.json
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/screens/: appointments_screen.dart  health_metrics_screen.dart  home_screen.dart  login_screen.dart  medicines_screen.dart  sos_screen.dart
flutter_app/lib/services/: api_service.dart  auth_service.dart
pages/: 1_Dashboard.py  2_Medicines.py  3_Appointments.py  4_Health_Metrics.py  5_Family_Health.py  6_Emergency_SOS.py
utils/: data_manager.py  helpers.py  theme.py
