[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.118.0",
    "firebase-admin>=7.1.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "twilio>=9.8.3",
    "uvicorn>=0.37.0",
]
